--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           theme: {
             extend: {
               fontFamily: {
-                lobster: "'Lobster Two', cursive",
+                lobster: "'Lobster Two'",
               },
               backgroundImage: {
                 banner: "url('./asset/banner.jpg')",
