--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                     </div>
                     <!-- Title -->
                     <div class="max-w-sm text-xl font-medium">
-                        Razer Kraken Kutty Edt Gaming Headset Quartz
+                        Etherlatte is famous coffee with proof of stack vibes
                     </div>
                     <!-- Price Container -->
                     <div class="flex flex-col mb-4 space-y-3 text-center md:text-left ">
