finish all the UI

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                     </div>
                     <!-- Price Container -->
                     <div class="flex flex-col mb-4 space-y-3 text-center md:text-left ">
-                        <p class="text-2xl font-bold">$599</p>
+                        <p class="text-2xl font-bold">Rp. 5000</p>
                     </div>
                     <!-- button Group -->
                     <div class="group">
