--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
     <!-- footer -->
     <footer class="bg-gray-800" >
         <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
-        <span class="text-sm text-gray-400 sm:text-center ">© 2023 <a href="#" class="hover:underline">BkWEb™ | Fajar Ramadhan</a>. All Rights Reserved.
+        <span class="text-sm text-gray-400 sm:text-center ">© 2023 <a href="#" class="hover:underline">Bitcaffee™ | Fajar Ramadhan</a>. All Rights Reserved.
         </span>
         <ul class="flex flex-wrap items-center justify-between gap-4 mt-3 text-sm font-medium text-gray-400 sm:mt-0">
             <li>
