add feture add to cart and notification

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </div>
                 <div id="total-amount" class="flex justify-end items-end py-2 my-6"><span>Total: Rp.0</span></div>
                 <div class="fixed border bottom-0 bg-blue-500">
-                    <button type="button" class="flex justify-center items-center w-max border bottom-0 left-0 absolute px-2 py-2 rounded-t-xl bg-yellow-700 text-white border-b-8 border-b-yellow-700">
+                    <button type="button" disabled class="flex justify-center items-center w-max border bottom-0 left-0 absolute px-2 py-2 rounded-t-xl bg-yellow-700 text-white border-b-8 border-b-yellow-700">
                         <a href="#">
                             BAYAR TAGIHAN
                         </a>
@@ -451,7 +451,7 @@
 
 
 
-<script src="./script/script.js"></script>
+<script type="module" src="./script/script.js"></script>
 
 </body>
 </html>
