--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 lobster: "'Yanone Kaffeesatz', sans-serif",
               },
               backgroundImage: {
-                banner: "url('./asset/banner.jpg')",
+                banner: "url('./asset/banner.jpeg')",
               }
             }
           }
@@ -92,7 +92,7 @@
         <div class="container mx-auto w-ful h-full flex justify-start items-center lg:flex-row">
             <div class="grid w-full text-start max-w-2xl px-4 py-2 lg:gap-0 xl:gap-0">
                     <h1 class="text-3xl pb-3 font-bold tracking-wide text-white sm:text-5xl xl:text-6xl md:max-w-screen-2xl">Rasakan Sensasi Bullish Mood Dengan Sekali Pump di Cangkir <span class="text-yellow-600">Kopi</span>mu</h1>
-                    <p class="text-sm sm:text-lg md:text-2xl pb-4 text-slate-300 font-medium">Lorem ipsum dolor sit amet consectetur atur obcaecati a excepturi! Lorem ipsum dolor sit amet.</p>
+                    <p class="text-sm sm:text-lg md:text-2xl pb-4 text-slate-300 font-medium">Caffe kami menyajikan berbagai menu dengan nama yang kami adopsi dari nama coin cryptocurrency</p>
                     <button class="flex w-fit space-y-2 sm:justify-start sm:space-y-0 sm:space-x-4 transition-all duration-150 bg-yellow-700 text-white border-b-8 border-b-yellow-700 rounded-lg hover:border-t-8 hover:border-b-0 hover:bg-yellow-700 hover:border-t-yellow-700 hover:shadow-lg">
                         <a href="#menu" class="inline-flex ring-1 text-2xl px-5 py-2 mr-3 text-white font-semibold text-center rounded-lg bg-yellow-500 md:text-3xl  focus:ring-4 ">
                             Beli Sekarang!
@@ -102,7 +102,6 @@
         </div>
     </section>
 
-    <!-- <hr class="py-8 mt-4 border-t-4 w-5/6 mx-auto"> -->
 
 
      <!-- about -->
@@ -112,7 +111,7 @@
         </div>
         <div class="container grid grid-cols-1  gap-2 sm:h-fit sm:mx-auto sm:gap-3 sm:grid-cols-2 py-4">
             <div class="inline w-5/6  rounded-xl md:w-auto md:h-full">
-                <img src="./asset/about.jpg" class="inline h-fit w-auto ring-gray-200 ring-2 shadow-xl rounded-xl " alt="about-img-1">
+                <img src="./asset/about.jpeg" class="inline h-fit w-auto ring-gray-200 ring-2 shadow-xl rounded-xl " alt="about-img-1">
             </div>
             <div class="ml-6 sm:m-0 h-fit p-2 xl:pt-14">
                 <h1 class="text-2xl inline font-bold text-yellow-600 py-3 xl:text-3xl">Kenapa Kopi Kami Berbeda?</h1>
@@ -152,187 +151,8 @@
                 </span>
             </h1>
         </div>
-        <div class="container mx-auto  flex flex-col flex-wrap items-center gap-4  sm:flex-row sm:justify-center sm:gap-6">
-            <div id="card-menu"  class="card-menu flex flex-col w-72 min-h-[10rem] overflow-hidden rounded-2xl shadow-md shadow-zinc-800 bg-zinc-900 hover:shadow-lg hover:shadow-zinc-800 hover:-translate-y-0.5 transition-all duration-150">
-                <img src="./asset/menu-dummy.jpeg" alt="dummy" class="w-full object-top h-full object-cover rounded-t-lg">
-                <div class="flex flex-col justify-between p-4 leading-normal">
-                    <h1 id="menu-name" class="menu-name text-2xl font-bold tracking-tight mb-2 ">PEPPRESO</h1>
-                    <h2 id="menu-price" class="menu-price text-2xl font-bold tracking-tight mb-2 ">Rp. 4000</h2>
-                    <!-- desrpition menu -->
-                     <div class="product-descript hidden max-w-sm text-lg font-medium">
-                        Rasa pahit dari meme vibes membuat adrenaline meningkat
-                    </div>
-                    <p id="rating" class="rating text-sm tracking-tight mb-4"> 
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <i class="fa-regular fa-star text-[#ffd500]"></i>
-                        <i class="fa-regular fa-star text-[#ffd500]"></i>
-                        <span id="rate">3.0</span>
-                    </p>
-                    <div class="flex w-full   ">
-                        <div class="inline-flex w-fit  font-mono ring-1 text-l px-5 py-2 mr-3 text-white font-semibold text-center rounded-lg bg-yellow-600 md:text-xl hover:bg-yellow-700 focus:ring-4 ">
-                            Tambah Keranjang
-                        </div>
-                    </div>   
-                </div>
-            </div>
-            <div class="card-menu flex flex-col w-72 min-h-[10rem] overflow-hidden rounded-2xl shadow-md shadow-zinc-800 bg-zinc-900 hover:shadow-lg hover:shadow-zinc-800 hover:-translate-y-0.5 transition-all duration-150">
-                <img src="./asset/menu-dummy.jpeg" alt="dummy" class="w-full object-top h-full object-cover rounded-t-lg">
-                <div class="flex flex-col justify-between p-4 leading-normal">
-                    <h1 id="menu-name" class="menu-name text-2xl font-bold tracking-tight mb-2 ">SHIBACHINO</h1>
-                    <h2 id="menu-price" class="menu-price text-2xl font-bold tracking-tight mb-2 ">Rp. 5000</h2>
-                    <!-- desrpition menu -->
-                     <div class="product-descript hidden max-w-sm text-lg font-medium">
-                        Sensasi inuShiba dari japanese meme memberikan sensasi geli
-                    </div>
-                    <p id="rating" class="rating text-sm tracking-tight mb-4"> 
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <i class="fa-regular fa-star text-[#ffd500]"></i>
-                        <i class="fa-regular fa-star text-[#ffd500]"></i>
-                        <span id="rate">3.0</span>
-                    </p>
-                    <div class="flex w-fit   ">
-                          <div class="flex w-full   ">
-                        <div class="inline-flex w-fit  font-mono ring-1 text-l px-5 py-2 mr-3 text-white font-semibold text-center rounded-lg bg-yellow-600 md:text-xl hover:bg-yellow-700 focus:ring-4 ">
-                            Tambah Keranjang
-                        </div>
-                    </div>   
-                    </div>   
-                </div>
-            </div>
-            <div class="card-menu flex flex-col w-72 min-h-[10rem] overflow-hidden rounded-2xl shadow-md shadow-zinc-800 bg-zinc-900 hover:shadow-lg hover:shadow-zinc-800 hover:-translate-y-0.5 transition-all duration-150">
-                <img src="./asset/menu-dummy.jpeg" alt="dummy" class="w-full object-top h-full object-cover rounded-t-lg">
-                <div class="flex flex-col justify-between p-4 leading-normal">
-                    <h1 id="menu-name" class="menu-name text-2xl font-bold tracking-tight mb-2 ">ETHERLATTE</h1>
-                    <h2 id="menu-price" class="menu-price text-2xl font-bold tracking-tight mb-2 ">Rp. 7000</h2>
-                    <!-- desrpition menu -->
-                     <div class="product-descript hidden max-w-sm text-lg font-medium">
-                        Nikmati kesegaran dari inovasi rasa proof of stack yg merevolusi.
-                    </div>
-                    <p id="rating" class="rating text-sm tracking-tight mb-4"> 
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <span id="rate">5.0</span>
-                    </p>
-                    <div class="flex w-fit   ">
-                          <div class="flex w-full   ">
-                        <div class="inline-flex w-fit  font-mono ring-1 text-l px-5 py-2 mr-3 text-white font-semibold text-center rounded-lg bg-yellow-600 md:text-xl hover:bg-yellow-700 focus:ring-4 ">
-                            Tambah Keranjang
-                        </div>
-                    </div>   
-                    </div>   
-                </div>
-            </div>
-            <div class="card-menu flex flex-col w-72 min-h-[10rem] overflow-hidden rounded-2xl shadow-md shadow-zinc-800 bg-zinc-900 hover:shadow-lg hover:shadow-zinc-800 hover:-translate-y-0.5 transition-all duration-150">
-                <img src="./asset/menu-dummy.jpeg" alt="dummy" class="w-full object-top h-full object-cover rounded-t-lg">
-                <div class="flex flex-col justify-between p-4 leading-normal">
-                    <h1 id="menu-name" class="menu-name text-2xl font-bold tracking-tight mb-2 ">SOLANOPI</h1>
-                    <h2 id="menu-price" class="menu-price text-2xl font-bold tracking-tight mb-2 ">Rp. 6000</h2>
-                    <!-- desrpition menu -->
-                     <div class="product-descript hidden max-w-sm text-lg font-medium">
-                        Kecepatan mood boost membuat badan ingin berdansa.
-                    </div>
-                    <p id="rating" class="rating text-sm tracking-tight mb-4"> 
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <i class="fa-regular fa-star text-[#ffd500]"></i>
-                        <span id="rate">4.0</span>
-                    </p>
-                    <div class="flex w-fit   ">
-                          <div class="flex w-full   ">
-                        <div class="inline-flex w-fit  font-mono ring-1 text-l px-5 py-2 mr-3 text-white font-semibold text-center rounded-lg bg-yellow-600 md:text-xl hover:bg-yellow-700 focus:ring-4 ">
-                            Tambah Keranjang
-                        </div>
-                    </div>   
-                    </div>   
-                </div>
-            </div>
-            <div class="card-menu flex flex-col w-72 min-h-[10rem] overflow-hidden rounded-2xl shadow-md shadow-zinc-800 bg-zinc-900 hover:shadow-lg hover:shadow-zinc-800 hover:-translate-y-0.5 transition-all duration-150">
-                <img src="./asset/menu-dummy.jpeg" alt="dummy" class="w-full object-top h-full object-cover rounded-t-lg">
-                <div class="flex flex-col justify-between p-4 leading-normal">
-                    <h1 id="menu-name" class="menu-name text-2xl font-bold tracking-tight mb-2 ">BITCHIATO</h1>
-                    <h2 id="menu-price" class="menu-price text-2xl font-bold tracking-tight mb-2 ">Rp. 6000</h2>
-                    <!-- desrpition menu -->
-                     <div class="product-descript hidden max-w-sm text-lg font-medium">
-                        Kenikmatan yang dirasa seakan menghempas segala kecemasan.
-                    </div>
-                    <p id="rating" class="rating text-sm tracking-tight mb-4"> 
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <span id="rate">5.0</span>
-                    </p>
-                    <div class="flex w-fit   ">
-                          <div class="flex w-full   ">
-                        <div class="inline-flex w-fit  font-mono ring-1 text-l px-5 py-2 mr-3 text-white font-semibold text-center rounded-lg bg-yellow-600 md:text-xl hover:bg-yellow-700 focus:ring-4 ">
-                            Tambah Keranjang
-                        </div>
-                    </div>   
-                    </div>   
-                </div>
-            </div>
-            <div class="card-menu flex flex-col w-72 min-h-[10rem] overflow-hidden rounded-2xl shadow-md shadow-zinc-800 bg-zinc-900 hover:shadow-lg hover:shadow-zinc-800 hover:-translate-y-0.5 transition-all duration-150">
-                <img src="./asset/menu-dummy.jpeg" alt="dummy" class="w-full object-top h-full object-cover rounded-t-lg">
-                <div class="flex flex-col justify-between p-4 leading-normal">
-                    <h1 id="menu-name" class="menu-name text-2xl font-bold tracking-tight mb-2 ">RIPPLELATTO</h1>
-                    <h2 id="menu-price" class="menu-price text-2xl font-bold tracking-tight mb-2 ">Rp. 6000</h2>
-                    <!-- desrpition menu -->
-                     <div class="product-descript hidden max-w-sm text-lg font-medium">
-                        Rasakan kemenangan SEC yang meningkatkan dopamine.
-                    </div>
-                    <p id="rating" class="rating text-sm tracking-tight mb-4"> 
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <span id="rate">5.0</span>
-                    </p>
-                    <div class="flex w-fit   ">
-                          <div class="flex w-full   ">
-                        <div class="inline-flex w-fit  font-mono ring-1 text-l px-5 py-2 mr-3 text-white font-semibold text-center rounded-lg bg-yellow-600 md:text-xl hover:bg-yellow-700 focus:ring-4 ">
-                            Tambah Keranjang
-                        </div>
-                    </div>   
-                    </div>   
-                </div>
-            </div>
-            <div class="card-menu flex flex-col w-72 min-h-[10rem] overflow-hidden rounded-2xl shadow-md shadow-zinc-800 bg-zinc-900 hover:shadow-lg hover:shadow-zinc-800 hover:-translate-y-0.5 transition-all duration-150">
-                <img src="./asset/menu-dummy.jpeg" alt="dummy" class="w-full object-top h-full object-cover rounded-t-lg">
-                <div class="flex flex-col justify-between p-4 leading-normal">
-                    <h1 id="menu-name" class="menu-name text-2xl font-bold tracking-tight mb-2 ">MOCALITEC</h1>
-                    <h2 id="menu-price" class="menu-price text-2xl font-bold tracking-tight mb-2 ">Rp. 4000</h2>
-                    <!-- desrpition menu -->
-                     <div class="product-descript hidden max-w-sm text-lg font-medium">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Suscipit, quo.
-                    </div>
-                    <p id="rating" class="rating text-sm tracking-tight mb-4"> 
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <i class="fa-solid fa-star text-[#ffd500]"></i>
-                        <span id="rate">5.0</span>
-                    </p>
-                    <div class="flex w-fit   ">
-                          <div class="flex w-full   ">
-                        <div class="inline-flex w-fit  font-mono ring-1 text-l px-5 py-2 mr-3 text-white font-semibold text-center rounded-lg bg-yellow-600 md:text-xl hover:bg-yellow-700 focus:ring-4 ">
-                            Tambah Keranjang
-                        </div>
-                    </div>   
-                    </div>   
-                </div>
-            </div>
+        <div id="box-menu" class="container mx-auto  flex flex-col flex-wrap items-center gap-4  sm:flex-row sm:justify-center sm:gap-6">
+           
          </div>   
     </section>
 
@@ -380,22 +200,22 @@
     <!-- footer -->
     <footer class="bg-gray-800" >
         <div class="w-full mx-auto max-w-screen-xl p-4 md:flex md:items-center md:justify-between">
-        <span class="text-sm text-gray-400 sm:text-center ">© 2023 <a href="#" class="hover:underline">Bitcaffee™ | Fajar Ramadhan</a>. All Rights Reserved.
-        </span>
-        <ul class="flex flex-wrap items-center justify-between gap-4 mt-3 text-sm font-medium text-gray-400 sm:mt-0">
-            <li>
-                <a href="#" class="mr-4 hover:underline md:mr-6 ">About</a>
-            </li>
-            <li>
-                <a href="#" class="mr-4 hover:underline md:mr-6">Privacy Policy</a>
-            </li>
-            <li>
-                <a href="#" class="mr-4 hover:underline md:mr-6">Licensing</a>
-            </li>
-            <li>
-                <a href="#" class="hover:underline">Contact</a>
-            </li>
-        </ul>
+            <span class="text-sm text-gray-400 sm:text-center ">© 2023 <a href="#" class="hover:underline">Bitcaffee™ | Fajar Ramadhan</a>. All Rights Reserved.
+            </span>
+            <ul class="flex flex-wrap items-center justify-between gap-4 mt-3 text-sm font-medium text-gray-400 sm:mt-0">
+                <li>
+                    <a href="#" class="mr-4 hover:underline md:mr-6 ">About</a>
+                </li>
+                <li>
+                    <a href="#" class="mr-4 hover:underline md:mr-6">Privacy Policy</a>
+                </li>
+                <li>
+                    <a href="#" class="mr-4 hover:underline md:mr-6">Licensing</a>
+                </li>
+                <li>
+                    <a href="#" class="hover:underline">Contact</a>
+                </li>
+            </ul>
         </div>
     </footer>
 
@@ -427,17 +247,6 @@
                     </div>
                     <!-- button Group -->
                     <div class="group">
-                        <div
-                            class="flex w-full mb-4 px-2 justify-center items-center md:justify-start border-gray-300 rounded-lg shadow-sm">
-                            <p class="text-sm tracking-tight"> 
-                                <i class="fa-solid fa-star text-[#ffd500]"></i>
-                                <i class="fa-solid fa-star text-[#ffd500]"></i>
-                                <i class="fa-solid fa-star text-[#ffd500]"></i>
-                                <i class="fa-solid fa-star text-[#ffd500]"></i>
-                                <i class="fa-solid fa-star text-[#ffd500]"></i>
-                                <span id="rate">5.0</span>
-                            </p>
-                        </div>
                         <button id="add-cart-btn" class="add-cart-btn w-full font-mono transition-all duration-150 bg-yellow-700 text-white border-b-8 border-b-yellow-700 rounded-lg md:text-2xl group-hover:border-t-8 group-hover:border-b-0 group-hover:bg-yellow-700 group-hover:border-t-yellow-700 group-hover:shadow-lg">
                             <div class="px-4 py-3 duration-150 bg-yellow-500 rounded-lg">
                                 Tambahkan Keranjang
@@ -455,3 +264,4 @@
 
 </body>
 </html>
+
